# First-project-Django

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/first_project_django/: asgi.py  settings.py  urls.py  wsgi.py
src/rooms_app/: models.py  tests.py  urls.py  views.py
src/rooms_app/migrations/: 0001_initial.py
